--- a/src/components/App.css
+++ b/src/components/App.css
@@ -14,15 +14,38 @@ img {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-  flex-direction: row;
+  flex-direction: column;
 }
-.innerBody{
-  width:80%;
-  background-color:lightblue;
+.body2 {
+  width:70%;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
   flex-direction: column;
+}
+.innerBody{
+  width:100%;
+  background-color:lightblue;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: row;
+}
+.bottom{
+  width:100%;
+  background-color:pink;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: row;
+}
+.bLeft{
+  width:100%;
+  background-color:pink;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: row;
 }
 
 .restcontainer {
@@ -112,8 +135,9 @@ table.dataTable thead .sorting_desc:after,
 table.dataTable thead .sorting_desc:before,
 table.dataTable thead .sorting_desc_disabled:after,
 table.dataTable thead .sorting_desc_disabled:before {
-bottom: .5em;
+bottom: .5em; color: rgb(212, 143, 59);
 }
+
 
 *{
   margin: 0;
@@ -170,3 +194,6 @@ h1 {
   width: 90vw;
   max-width: 90vw;
 } 
+.dataStuff{
+  color: aquamarine;
+}
